# es

./: .gitignore  BENCHMARK_SCRIPTS_UPDATE.md  Cargo.toml  DISCARD_OUTPUT_PLAN.md  DISCARD_OUTPUT_SUMMARY.md  compare_sort_duckdb_versions.sh  cut_csv_half.sh  duckdb_sort.sh  gensort_sort_bench.sh  imbalance_factor_bench.sh  lineitem_csv_bin.sh  lineitem_sort_bench_ovc.sh  model_factors.fdb_latexmk  model_factors.fls  model_factors.tex  overnight_run.sh  plot_bars.py  plot_ovc.py  plot_overnight.py  plot_thread_sweep_heatmaps.py  plot_thread_sweep_mem_heatmaps.py  plot_thread_sweeps.py  rebuild_summary.py  regime2_lineitem.sh  rle_csv_bin.sh  run_length_bench.sh  run_size_analysis.ipynb  run_thread_sweeps  show_kvbin.sh  sort_lineitem_duckdb.sql  tempy.py  thread_count_bench.sh  thread_mem_sweep.sh  thread_mem_sweep_fixed.sh  threads.sh  tree_of_losers_vs_heap_analysis.md  yellow_taxi_sort_bench.sh
dataset_generator/: generate_datasets.sh  generate_gensort_dataset.sh
docs/: kvbin_generators.md  merge_partitioning_with_sparse_indexes.md  ovc_merge.md  ovc_sr_range_iterator.md  resource_planner_policy.md  sparse_index_page_recycling.md  sparse_index_stride_calculation.md  zero_copy_merge.md
examples/: gen_freq_key_kvbin.rs  gen_heavy_key_kvbin.rs  gen_heavy_range_kvbin.rs  gen_prefix_skew_heavy_payload_kvbin.rs  gen_sort_cli.rs  kvbin_benchmark_cli.rs  lineitem_benchmark_cli.rs  policy_run_length.rs  replacement_selection_cache_bench.rs  sketch_partition_benchmark.rs  yellow_taxi_benchmark_cli.rs  zipf_gensort.rs
logs/: benchmark_analysis.ipynb  thread_count_fio.ipynb  (+7 more)
(+150 files in other folders)
